# Disaster_INFO_Remastered

./: .env.example  .gitignore  API_VERIFICATION_REPORT.md  BACKEND_COMPLETION_REPORT.md  IMPLEMENTATION_PLAN.md  README.md  app.py  cleanup_and_reprocess.py  main.py  pyproject.toml  requirements.txt  test_api_endpoints.py  test_full_pipeline.py  verify_all.py  verify_api.py
reactfrontend/: package-lock.json  package.json  tailwind.config.js
reactfrontend/src/: App.jsx  index.css
reactfrontend/src/api/: client.js
reactfrontend/src/components/: Layout.jsx  PulseButton.jsx  Sidebar.jsx  StatCard.jsx  TopBar.jsx
reactfrontend/src/pages/: Analytics.jsx  Dashboard.jsx  EventsFeed.jsx  MapExplorer.jsx
src/alerts/: alert_engine.py  risk_scorer.py  safety_advisor.py
src/api/: app.py
src/api/routes/: alerts.py  events.py  pipeline.py  stats.py
src/classifiers/: llm_fallback.py  ml_classifier.py  pipeline.py  rule_classifier.py  severity_detector.py
src/collectors/: ndma_collector.py  newsapi_collector.py  rss_collector.py
src/db/: crud.py  database.py
src/geo/: clusterer.py  geo_resolver.py  loc_normalizer.py  ner_extractor.py  spatial_dedup.py
src/processors/: deduplicator.py  keyword_filter.py  normalizer.py
src/scheduler/: jobs.py
